project-kb/media-composer/versions/2021.3/readme.md
---
product: media-composer
product-area: editing
version: "2021.3"
release-date: 01/03/2021
doc-type: readme
source: pdf
confidentiality: public
date-added: 14/05/2026
status: current
---

Composer® ReadMe for Media v2021.3 IMPORTANT: Avid periodically makes software updates available for download on Avid.com at the following location:www.avid.com/us/support/downloads. Please check the above site regularly for information on available downloads for your product.
Avid® recommends that you read all the information in this ReadMe file thoroughly before installing or using any new software release.
Important: Search the Avid Knowledge Base for the most up-to-date ReadMe file, which contains the latest information that might have become available after the documentation was published.
This document describes compatibility issues with previous releases, software installation instructions, hardware and software requirements, and summary information on system and memory requirements. This document also lists hardware and software limitations.
Symbols and Conventions Symbols and Conventions Avid documentation uses the following symbols and conventions:
Symbol or Convention Meaning or Action
> **Note:** A note provides important related information, reminders, recommendations, and
strong suggestions.
A caution means that a specific action you take could cause harm to your computer or cause you to lose data.
w A warning describes an action that could cause you physical harm. Follow the guidelines in this document or on the unit itself when handling electrical equipment.
> **Note:** A user tip provides a helpful hint that can aid users in getting the most from their
system.
> **Note:** A shortcut shows the user keyboard or mouse shortcuts for a procedure or
command.
> This symbol indicates menu commands (and subcommands) in the order you select them. For example, File > Import means to open the File menu and then select the Import command.
This symbol indicates a single-step procedure. Multiple arrows in a list indicate that you perform one of the actions listed.
(Windows), (Windows This text indicates that the information applies only to the specified operating only), (macOS), or (macOS system, either Windows or macOS.
only) Bold font Bold font is primarily used in task instructions to identify user interface items and keyboard sequences.
Italic font Italic font is used to emphasize certain words and to indicate variables.
Courier Bold font identifies text that you type.
Courier Bold font Ctrl+key or mouse action Press and hold the first key while you press the last key or perform the mouse action. For example, Command+Option+C or Ctrl+drag.
| (pipe character) The pipe character is used in some Avid product names, such as MediaCentral | Production Management. In this document, the pipe is used in product names when they are in headings or at their first use in text.
If You Need Help If You Need Help If you are having trouble using your Avid product:
1. Retry the action, carefully following the instructions given for that task in this guide. It is
especially important to check each step of your workflow.
2. Check this ReadMe file for the latest information that might have become available after the
documentation was published. Also check online for the most up-to-date ReadMe because the online version is updated whenever new information becomes available. To view the online ReadMe, select ReadMe from the Help menu, or visit the Knowledge Base at http://www.avid.com/readme.
3. Check the documentation that came with your Avid application or your hardware for
maintenance or hardware-related issues. In addition to the printed documentation supplied with your editing application, the documentation is supplied in PDF format when you install the application. Topics that you print from the Help have limited page layout and formatting features. If you want to print a higher quality version of Help information, Avid recommends that you print all or part of the PDF version of the appropriate Avid manual included in the Online Library for your editing application. To access the Online Library, select Help > Online Library from within your Avid editing application.
hours per day, 7 days per week. Search the Knowledge Base to find answers, to view error messages, to access troubleshooting tips, to download updates, and to read or join online message-board discussions.
Media Composer Notes (mac Only) macOS Catalina does not support 32 bit applications. The legacy Title Tool, Marquee Title Tool and QuickTime legacy codecs are no longer installed when you install Media Composer. If you are installing Media Composer v2020.4 on a system with a pre-Catalina OS, a separate installer is provided that allows you to choose to install the Title Tool, Marquee, and QuickTime legacy codecs. Only install legacy codecs if QuickTime is installed on your system. The installer is Media Composer Legacy Components 2020.4 Mac. You can get the installer from MyAvid, Link, or the download center.
MCDEV-11537 If you intend to use full-frame stereoscopic with an Avid Artist DNxIQ, you may want to remain with Media Composer v2018.12.x until the issues with Stereoscopic support are resolved in a future version.
(Mac) You might receive an “Is not optimized for your Mac” message while launching Media Composer for the first time on a Mac OS 10.14.x system. Press OK to continue.
If You Need Help (cid:129) (MCCET- 2541) When working with Avid Artist DNxIO or Avid Artist DNxIQ, you should disable the Line In recording input (BlackMagic Audio in the Windows OS).
(cid:129) Avid recommends that you do not install Desktop Video software version 10.10.1 on Media Composer versions prior to v2018.5.1.
(cid:129) Avid Artist DNxIO and Avid Artist DNxIQ: If you are using Avid Artist DNxIO, Avid Artist DNxIQ, or a BlackMagic Designs video device, please update to Desktop Video software version v11.0 or higher. If you are using Avid Artist DNxIV and Avid Artist DNxIP please update to AJA software v15.2 or later.
(cid:129) Qualified Operating Systems: For information on qualified operating systems, see Qualified Hardware and Operating Systems.
(cid:129) Dongle Info (Mac Only): The Dongle Sentinel driver installer is no longer automatically installed when you install the editing application. The driver is now located in the Avid_Utilities folder (/Applications/Utilities/Avid_Utilities/Sentinel_Driver). If you have a dongle, manually install the driver from this location.
When installing the Sentinel Driver, check your System Preferences and select “Security and Privacy.” You may need to choose to Allow the driver to be accessed.
(cid:129) Media Composer now includes a dnxmov2mxf executable in the \Program Files\Avid\Avid Media Composer\SupportingFiles\Utilities folder. This executable allows you to manually convert MOV files with DNX essence with separately stored alpha to an MXF OP1a file with DNX essence and embedded alpha.
The tool is available for Windows, osX and Linux. To run on Windows, Visual C++ Redistributable for Visual Studio 2015 or Visual C++ Redistributable for Visual Studio 2017 is required.
Run the command from a command prompt on Windows or from terminal on macOS.
DNXMOV2MXF usage is:
dnxmov2mxf path_to_mov [path_to_mxf] Security Guidelines As system and network security attacks become increasingly more inventive and persistent, Avid has adopted a new security strategy to help you, our customer and partner, better protect your assets and intellectual property. As you might know, Avid has traditionally recommended Symantec Endpoint Protection as the preferred and qualified solution for much of the Avid product line. As of Q3, 2020, Avid introduced a more flexible strategy that provides general guidelines for protecting your Avid systems. This new policy allows you to choose the best security solution for your organization, while still following Avid best practices.
Changed in Media Composer v2021.3 Changed in Media Composer v2021.3 For details on new features, see the What’s New v2021.3 on the Knowledge Base.
Also see Qualified Hardware and Operating Systems for the latest OS support and Compatibility Chart for the latest NVDIA driver support.
Fixed in Media Composer v2021.3 ➤ Bug Number: MCCET-3986. A sifted bin did not show the correct assets after switching from Text View to Frame View.
➤ Bug Number: MCCET-3584. (MediaCentral | Cloud UX environment) When batch re-importing TIFF that are included in Prunus AAF files, clips display as WRONG FORMAT.
➤ Bug Number: MCCET-4014. You could not login to MediaCentral CloudUX if the password contained a special character.
➤ Bug Number: MCCET-3858. In some instances, performing a Consolidate changed the tape base Timecode.
➤ Bug Number: MCCET-3729. You could not fast import if “Use the current import resolution” was selected in the Import Settings OMF/AAF dialog.
➤ Bug Number: MCCET-3587. You might not have been able to open a sequence or you might have received “Crumb Exists” errors when opening a sequence containing markers on TC1.
➤ Bug Number: MCCET-3933. In some instances, the number of viewable workspaces was limited in a Media Composer | Cloud Remote environment.
➤ Bug Number: MCCET-3954. You might have received a “PMM mismatch error” when performing an Add and Render of a dissolve effect with AVC Long GOP linked with the UME plug-in.
➤ Bug Number: MCCET-3907. In some instances, the wrong image was displayed when modifying an object in the Effect Editor where there was an In and Out point.
➤ Bug Number: MCCET-3576. A gray border may have appeared when resizing matte keys.
➤ Bug Number: MCCET-3735. In some instances, you could not successfully relink between Interplay transcoded XDCAM50 and MPEG50.
Fixed in Media Composer v2021.3 ➤ Bug Number: MCCET-3904. Selecting and playing all Script marks near the end of a take only played one clip.
➤ Bug Number: MCCET-3949. In the Audio Mixer, you could not enter a value in the volume level field at the bottom of the slider.
➤ Bug Number: MCCET-2929. You might have received an “Exception” error when performing a Digital Cut immediately after capturing to tape.
➤ Bug Number: MCCET-3975. If the Regional Decimal symbol (Windows) or Language Decimal (macOS) was set to comma rather than period, you could not adjust the clip pan/vol with mark in/out in the Audio Mixer.
➤ Bug Number: MCCET-3936. Playback was delayed after switching between Color and Edit workspaces.
➤ Bug Number: MCCET-3977. In some instances, the User Settings pane appeared blank after creating a new Timeline profile.
➤ Bug Number: MCCET-3967. Media Composer might have been improperly importing audio track metadata.
➤ Bug Number: MCCET-3940. Subtitles that included a dollar sign ($) exported from Media Composer did not display properly in some 3rd party applications.
➤ Bug Number: MCCET-3987. You might have seen a “Loading media file information” message, a Rescan message, a Relink dialog or in some instances a crash when performing an insert or overwrite to the Timeline.
➤ Bug Number: MCCET-3853. In some instances, when inserted into a sequence, Apple ProRes 422 clips were duplicated in the active bin.
➤ Bug Number: MCCET-3882. Marquee titles disappeared after being promoted to Avid Titler+.
➤ Bug Number: MCCET-3959. If you performed an Audio Punch-in and then stopped the playback with the spacebar, the recorded segments might have been deleted.
➤ Bug Number: MCCET-3984. Alt+clicking the dB value field did not reset it to zero in the Audio Mixer tool.
➤ Bug Number: MCCET-3578. In some instances, adding or removing a Timewarp effect with “Adaptive Deinterlace Source” enabled, moved the image one frame and broke sync between video track and audio tracks.
Limitations ➤ Bug Number: MCCET-3649. When linked with the UME plug-in, AVC Long GOP interlaced QT mov file displayed as 12.5fps in the FPS column instead of 25fps.
➤ Bug Number: MCCET-3722. (macOs) The Panasonic P2 plugin was not working with Media Composer v2020.x This has been fixed with P2 plug-in v4.9.0.5.
➤ Bug Number: MCCET-3464. (Avid Artist DNxIQ, Avid Artist DNxIO) Intermittently, when rewinding or fast-forwarding on audio only, playback stopped.
➤ Bug Number: MCCET-4025. You might have received a “This program is not supported on VM instances” message when launching a Media Composer VM with a Floating License.
➤ years, for example 2019 appeared as 1919.
Limitations The following are known limitations (cid:129) Photoshop PSD files are not supported for AMA linking if QuickTime is not installed.
(cid:129) Some fonts, by their design, are available only in Bold. On the Mac system it can happen that selecting a font does not produce any visual changes. Try selecting “Bold.” (cid:129) If you launch a project and receive an “Enable 3rd Party Emulation” warning, even if you select Enable in the warning dialog, you should also perform the following: Select File > Settings and click the Project tab. Click General Settings and select “Enable Bin Sharing on 3rd party storage emulating Avid NEXIS/ISIS.” ➤ Bug Number: MCCET-3788. You might receive a “clip name is a clip in a multi-essence file that cannot be exported using the specified Embedded in AAF setting” when exporting embedded AAFs with OP1a audio clips.
Workaround: Consolidate the OP1a clips to Avid OP-Atom prior to performing the export.
➤ Bug Number: APPSVCS-723. The Collab App in MediaCentral CloudUX window does not currently work with Media Composer.
➤ Bug Number: MCDEV-13604. You might have issues playing clips containing Media Composer effects in the Baselight User Interface if the Fast Image Access option is enabled in the Baselight plug-in Limitations ➤ Bug Number: MCDEV-12926. (macOS) If you have upgraded to macOS 10.15.4, there is a known issue with local attached RAID storage. The system will hang when running Media Composer or copying large files. This does not happen with earlier versions of the OS. You can read details about this issue in this blog. This limitation no longer exists with macOS 10.15.5.
➤ Bug Number: MCDEV-12988. (macOS) The AMA Drastic plug-in is not supported with Media Composer v2020.4 ➤ Bug Number: MCDEV-12964. For a faster performance of export audio/video sequences to .mov in 2020.4, please render the sequence prior to export, or disable the GPU fx (in the Render Settings - Current menu) ➤ Bug Number: MCDEV-12735. Maestro graphics do not appear correctly in the Timeline if your system uses the Radeon video card.
➤ Bug Number: DEFI-1808. (Media Composer | Distributed Processing) Two clips or sequences will always be created when performing a consolidate or transcode with Media Composer | Distributed Processing.
➤ Bug Number: MCDEV-11481. Promoting a title from the Title Tool application to Avid Titler+ cannot be performed if it includes a motion adapter.
➤ Bug Number: MCCET-11796. Larger than 10 bit DPX files might fail to link correctly.
Workaround: Go to File > Settings and click the User tab. In the Link Settings, click the Link Options tab and make sure Alpha Channel is set to Ignore.
➤ Bug Number: MCDEV-11430. Media Tool ignores the “Current project” filtering option and lists media files that are not associated with the current project.
➤ Bug Number: MCDEV-11197. In some instances, the Interleave option might not appear in the Export As dialog box. If you are performing an Export using the Avid Media Processor, the Interleave option should appear when you choose Stereo, 5:1, or 7.1 Audio.
Workaround: If it does not appear, briefly toggle back to the Mono setting, then toggle to Stereo Mix once again. Doing so should reveal the Interleave option.
➤ Bug Number: MCDEV-8641. (AMD Graphics). Systems with AMD graphics cards might display tearing when performing Full Screen playback.
➤ Bug Number: MCDEV-9269. (Media Composer | Cloud) After performing a remote download operation on a sequence containing AVC-I 100 remote media, the downloaded media appears as XAVC-I 100.
Before Installing the Editing Application Workaround: Download the entire master clips.
➤ Bug Number: (macOS). You may occasionally see the menu bar flash followed by a brief beach ball. To fix this, deactivate “Displays have separate spaces” under System Preferences > Mission Control settings.
➤ Bug Number: MCDEV-9011. Intermittently, when working with the XDCAM Nablet Plug-in, you might see “Failed to get the sample position from the AMA Plug-in” errors if you have waveforms enabled in the Timeline.
➤ Bug Number: COGS-2560. While working in the Script Window, text operations (cut/copy/paste/delete/editing) can only be done in edit mode. See “Editing a Script” in the Help.
➤ Bug Number: MCDEV-5650. When working with Panasonic LongG media, you might receive an “SFPlayConsumer Timeout” error if audio waveforms are enabled.
Workaround: Turn off audio waveforms.
➤ Bug Number: MCDEV-5385. MultiCam editing with Panasonic LongG media is not supported with this release.
Before Installing the Editing Application Media Composer | Enterprise and Media Composer | Distributed Processing If you are working with Media Composer | Enterprise or Media Composer | Distributed Processing, please refer to the “Installation Prerequisites” section in the Media Composer | Enterprise Administration Guide and Media Composer | Distributed Processing Administration Guide to make sure you have compatible Avid MediaCentral Cloud UX Platform ISO and Avid MediaCentral Cloud UX Feature Pack ISO versions.
Avid DX Driver Separate Installer The Avid DX Driver is not automatically installed when you install the editing application. If you need to install the Avid DX Driver to work with your Avid IO device, you can install it separately.
The installer is located:
(cid:129) (Mac) /Applications/Utilities/Avid Utilities (cid:129) (Windows) Program Files\Avid\Utilities\DXDrivers Before Installing the Editing Application Before Installing the Editing Application in an Avid Interplay Environment Please note the following before you install the editing application in an Avid Interplay or Avid MediaCentral environment.
Carefully read through the “Avid Editor Compatibility with Interplay Releases” guide (found in the following link) before upgrading. It might be necessary to also upgrade the Interplay components on the editing client.
http://avid.force.com/pkb/articles/en_US/compatibility/Avid-Video-Compatibility-Charts Buffer Error Message The editing application requires a minimum of 8GB RAM. If you try to install the editing application on a system with less than 8GB RAM, you will receive a buffer error and installation will not proceed.
Download Note To avoid “File Path too long” or a “File cannot be copied” warning while unzipping the downloaded installer, try placing the installer .zip on the root level of your C:\ drive and unzip it from that location.
User Right to Raise Thread Priority (Windows) Note for Domain Administrators: If your editing systems are part of a domain, you must give the user the right to “Increase Scheduling Priority.” This must be done within the Domain Group Policy on the domain controller by giving the right explicitly to the user or giving the right to a group and adding the user to that group. You will not be able to launch as a regular user if this is not set properly.
If you are part of a domain, a Domain Administrator should install and perform the first launch of the editing application.
Install as Administrator You need to first install and launch the editing application as an Administrator. If you are in a Shared Storage environment, mount your workspaces as an Administrator. You may then log off and log back in as a Standard user, if necessary.
After Installing the Editing Application After Installing the Editing Application AMA Plug-Ins You cannot install the AMA Plug-ins while the editing application background services are running. Make sure you Stop the services before installing the AMA Plug-Ins. The stop/start background services icon is on the menu bar (Macintosh) or taskbar (Windows). Once you install the new AMA plug-in, restart the services. See “Starting and Stopping Avid Background Services” in the Help.
Notes on Software Licensing If You Upgrade Your Operating System If you need to upgrade your operating system after you install your Avid editing application, first deactivate your software. After you upgrade your operating system and, if required, reinstall your application, you can reactivate your software. For information on activating and deactivating your software license, see the Installation Guide for Avid Editing Applications.
Minimum RAM Recommendation For this release Avid recommends 16 GB minimum, 32 GB recommended. Some features might require more RAM and specific hardware. See “Feature Performance” on page 30 for more info.
Qualified Hardware and Operating Systems Some features are processor-intensive and require specific hardware. See “Feature Performance” on page 30 for more info.
The following tables provide the information on qualified Windows and Macintosh hardware.
For 3rd-Party Open IO hardware qualification refer to the manufacturer’s documentation. See the Open IO Frequently Asked Questions document on the Knowledge Base:
http://avid.force.com/pkb/articles/en_US/faq/en422991 The following lists the qualified Operating Systems. Depending upon your hardware the qualified Operating Systems are:
(cid:129) Windows v10 64-bit v1909 or later (Professional and Enterprise).
(cid:129) Macintosh 10.13.6, 10.14.6, 10.15.7, 11.1, 11.2.3 Qualified Hardware and Operating Systems
> **Note:** With the release of Mac OS v10.13.x and higher, Apple requires manual approval of loading
Kernel Extensions (KEXTs). (For example BlackMagic, and AJA IO devices install Kernel Extensions.) At installation time, you should get a dialog saying that the KEXT was not loaded.
You must go the “Security & Privacy” system preference and manually approve the KEXT. Keep the Security & Privacy pane open after you install the I/O device drivers so that you will see the notice that the driver has been blocked and press the “allow” button within 30 minutes of installing or the driver will be permanently blocked.
Qualified Workstations and Laptops The following tables list the qualified workstations and laptops for Media Composer editing applications.
NOTE: NVIDIA drivers are not included with the Media Composer installer. You must access the Nvidia website - Nvidia.com to download the applicable driver.
NOTE: AMD drivers are not included with the Media Composer installer. You must access the AMD website - AMD.com to download the applicable driver.
Qualified PC Workstations with Avid Media Composer The following PC Workstations are qualified with Avid Media Composer.
> **Note:** Avid Artist DNxIV requires a Thunderbolt 2 or 3 card. See details here.
Qualified PC Hardware Graphics Card Supported with HP Z2 G5 2.8 Ghz or higher 6, 8, or 10 core Nvidia P620, Avid Artist DNxIO i7/i9/Xeon Tower or SFF P1000, P2200, RTX Avid Artist DNxIQ 16 to 128 GB DDR4-2933 memory 4000 Avid Artist DNxIV AMD W5500, Avid Artist DNxID W5700 Avid Artist DNxIP HP Z2 G5 Mini 3.0 Ghz or higher 6, 8, or 10 Nvidia P620, Avid Artist DNxIO core i7/i9/Xeon T1000, T2000 Avid Artist DNxIQ 16 to 64 GB DDR4-2933 Memory. Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 3640 2.8 Ghz or higher 6, 8 or 10 core Nvidia P620, Avid Artist DNxIO i7/i9/Xeon Tower P1000, P2200, RTX Avid Artist DNxIQ 16 to 128 GB DDR4-2933 memory 4000 Avid Artist DNxIV AMD W5500, Avid Artist DNxID W5700 Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with Dell 3440 2.8 Ghz or higher 6, 8 or 10 core Nvidia P620 P1000 Avid Artist DNxIO i7/i9/Xeon SFF Avid Artist DNxIQ 16 to 128 GB DDR4-2933 memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P340 2.8 Ghz or higher 6, 8 or 10 core Nvidia P620 P1000 Avid Artist DNxIO i7/i9/Xeon Tower or SFF P2200, RTX 4000 Avid Artist DNxIQ 16 to 128 GB DDR4-2933 memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P340 Tiny 2.8 Ghz 6 or 8 core i7/i9 Nvidia P620 P1000 Avid Artist DNxIO 16 to 64 GB DDR4-2933 memory Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P620 12-64 core 2.7 Ghz or higher Nvidia RTX 4000, Avid Artist DNxIO AMD Threadripper Pro 5000, 6000 Avid Artist DNxIQ 32 to 256 GB DDR4-3200 Memory Avid Artist DNxIV AMD W5500, Avid Artist DNxID W5700 Avid Artist DNxIP Boxx ApexxT4 32 core 3.7 Ghz or 64 core 2.9 Nvidia RTX 5000 Avid Artist DNxIO Ghz AMD Threadripper AMD W5700 Avid Artist DNxIQ 32 to 256 GB DDR4-3200 Memory AMD Pro VII Avid Artist DNxIV Thunderbolt 3 option Avid Artist DNxID Avid Artist DNxIP HP Z2 G4 3.0 Ghz or higher six core i7/Xeon E3 Nvidia P620, Avid Artist DNxIO Tower or SFF P1000, P2000 AMD Avid Artist DNxIQ 16 to 64 GB DDR4-2666 memory WX7100 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 3630 3.0 Ghz or higher six core i7/Xeon E3 Nvidia P1000, Avid Artist DNxIO Tower 16 to 64 GB DDR4-2666 memory P2000 AMD Avid Artist DNxIQ WX7100 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with Dell 3430 3.0 Ghz or higher 6-8 core i7/Xeon E3 Nvidia P620, P1000 Avid Artist DNxIO SFF 16 to 64 GB DDR4-2666 memory Avid Artist DNxIQ AMD WX4100 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 3930 3.0 Ghz or higher six core i7/Xeon E3 Nvidia P1000, Avid Artist DNxIO 1U Rack 16 to 64 GB DDR4-2666 memory P2000, P2200 AMD Avid Artist DNxIQ WX7100 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P330 3.0 Ghz or higher 6 or 8 core Nvidia P600 P1000 Avid Artist DNxIO i7/Xeon E3 Tower or SFF 16 to 64 GB P2000 Avid Artist DNxIQ DDR4-2666 memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P330 Tiny 2.4Ghz 6-8 core i7/i9 Nvidia P600, P620, Avid Artist DNxIO 16 to 64 GB DDR4-2666 memorys P1000 Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Z2 G4 Mini 3.0 Ghz or higher six core Nvidia P600, P1000 Avid Artist DNxIO i7/Xeon E3 AMD WX7100 Avid Artist DNxIQ 16 to 32 GB 2666Mhz DDR4 Memory. Avid Artist DNxIV Performance model only Thunderbolt option. Avid Artist DNxID Avid Artist DNxIP HP Z8 G4 Dual [8 - 24 core 2.1 Ghz or higher] Nvidia P4000, Avid Artist DNxIO scalable P5000, P6000 Avid Artist DNxIQ Avid Artist DNxIV 64-128 GB DDR4-2666 memory, Tower AMD WX7100, Avid Artist DNxID WX9100 Avid Artist DNxIP HP Z6 G4 Dual [8 -24 core 2.1 Ghz or higher] Nvidia P2000, Avid Artist DNxIO Intel Scalable Processors P4000, P5000, RTX Avid Artist DNxIQ 64 to 192 GB DDR4-2666 memory 4000, 5000 Avid Artist DNxIV AMDWX7100 Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with HP Z4 G4 6 - 10 core or 18 core 2.3 Ghz or Nvidia P1000, Avid Artist DNxIO higher processor P2200, P4000 Avid Artist DNxIQ Avid Artist DNxIV 32-128 GB DDR4-22xx memory RTX 4000 Avid Artist DNxID AMD WX7100 Avid Artist DNxIP Dell 7920 Dual (8-24 core 2.1 GHz or higher) Nvidia P4000 Avid Artist DNxIO Intel Scalable Processors Tower P5000 P6000 Avid Artist DNxIQ 64 to 128 GB DDR4-2666 memory AMD WX7100 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell R7920 Dual (8-24 core 2.1 GHz or higher) Nvidia P4000 Avid Artist DNxIO Intel Scalable Processors Rack P5000 P6000 Avid Artist DNxIQ 64 to 128 GB DDR4-2666 memory AMD WX7100 Avid Artist DNxIV Thunderbolt adapter not supported in Rack 7920 Avid Artist DNxID Avid Artist DNxIP Dell 7820 Dual (8-24 core 2.1 GHz or higher) Nvidia P2000, Avid Artist DNxIO Intel Scalable Processors P4000 P5000 Avid Artist DNxIQ 64 to 128 GB DDR4-2666 memory RTX 4000, 5000 Avid Artist DNxIV AMD WX7100 Avid Artist DNxID Avid Artist DNxIP Dell 5820 6-18 core 2.3 Ghz or higher Nvidia P1000, Avid Artist DNxIO Intel Xeon W2-2xx Core i7/i9 P2200, P4000 Avid Artist DNxIQ 32 to 128GB DDR4-2666 memory AMD WX5100, Avid Artist DNxIV 7100 Avid Artist DNxID Avid Artist DNxIP Lenovo P920 Dual [8 -28 core 2.1 Ghz or Nvidia P4000 Avid Artist DNxIO higher] Intel Scalable Processors P5000, P6000 Avid Artist DNxIQ 64 to 192 GB DDR4-2666 memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Z1 G3 All-in-one 3 3.4 Ghz or higher quad Nvidia M1000M, core i7/Xeon E3 M2000M 16 to 64 GB DDR4-2133 memory HP Z240 3.0 Ghz or higher quad core i7/Xeon Nvidia P600, P100, Software Only E3 64 GB DDR4-2400 memory Tower or SFF P2000 HP Z2 Mini 3.0 Ghz or higher quad core Nvidia M620 Software Only i7/Xeon E3 16 to 32 GB 2400Mhz DDR4 Memory, USB-C Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with Dell 3620 3.0 Ghz or higher quad core i7/Xeon Nvidia M2000, Software Only E3 16/32 GB DDR4-2400 memory Tower M4000 P600, P1000 Dell 3420 3.0 Ghz or higher quad core i7/Xeon Nvidia K620, Software Only E3 16/32 GB DDR4-2400 memory SFF K1200 P600, P1000 Dell 5720 AIO 3.3 Ghz or higher quad core AMD WX4150, i7/Xeon E3 3840x2160 - 16 to 64 GB 2400Mhz WX7100 Avid Artist DNxIO DDR4 Memory, thunderbolt 3/USB-C Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P720 Dual [8 -28 core 2.1 Ghz or NvidiaP2000, Avid Artist DNxIO higher] Intel Scalable Processors P4000 P5000 Avid Artist DNxIQ 64 to 192 GB DDR4-2666 memory RTX 4000, 5000 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P520C 6, 8, 10 or 18core 2.3 Ghz or Nvidia P1000, Avid Artist DNxIO higher] Intel W-Processors P2200 P4000 Avid Artist DNxIQ 32 to 128 GB DDR4-2666 memory RTX 4000 Avid Artist DNxID Avid Artist DNxIP Lenovo P320 3.0 Ghz or higher quad core Nvidia P600, Software Only i7/Xeon E3 16/32 GB DDR4-2400 memory P1000, Tower or SFF P2000(Tower) Lenovo P320 Tiny 2.9 GHz quad core i7-7700T Nvidia P600 Software Only HP Z840 Dual [8 - 16 core 2.1 Ghz or higher] Nvidia P4000, Avid Artist DNxIO Intel V4 32/64 GB DDR4 2400 memory P5000, P6000, Avid Artist DNxIQ M4000, M5000, Avid Artist DNxIV M6000 Avid Artist DNxIP AMD W7100, WX7100 HP Z640 Dual 10, 12, 16 core 2.1 Ghz or Nvidia P4000, Avid Artist DNxIO higher] Intel V4 32/64 GB DDR4-2400 memory P5000, P6000 Avid Artist DNxIQ M2000, M4000 Avid Artist DNxIV M5000, M6000 Avid Artist DNxIP AMDW5100, W7100, W8100 Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with Dell 7910 Dual [8 - 16 core 2.1 Ghz or higher] Nvidia M4000, Avid Artist DNxIO M5000, M6000 Avid Artist DNxIQ Intel V4 32/64 GB DDR4-2400 memory Avid Artist DNxIV AMD W7100, Avid Artist DNxIP W8100 Dell R7910 Dual [8 - 16 core 2.1 Ghz or higher] Nvidia M4000, Avid Artist DNxIO M5000, M6000 Avid Artist DNxIQ Intel V4 32/64 GB DDR4-2400 memory AMD W7100, W8100 Dell 7810 Dual [8-16 core 2.1 Ghz or higher] Nvidia M2000, Avid Artist DNxIO M4000, M5000 Avid Artist DNxIQ Intel V4 32/64 GB DDR4-2400 memory Avid Artist DNxIV AMD W5100W, Avid Artist DNxIP W7100, W8100 Dell 5810 [6 or 8 core 3.0 Ghz or higher] Intel Nvidia M2000 Avid Artist DNxIO V4 16/32/64 GB DDR4- 2400 memory Avid Artist DNxIQ AMD W5100 Avid Artist DNxIV Avid Artist DNxIP Lenovo P910 Dual [8 - 16 core 2.1 Ghz or Nvidia M4000, Avid Artist DNxIO higher] Intel V4 32/64 GB DDR4-2400 memory M5000, M6000 Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxIP Lenovo P710 Dual [8 - 16 core 2.1 Ghz or Nvidia M2000, Avid Artist DNxIO higher] Intel V4 32/64 GB DDR4-2400 memory M4000, M5000 Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxIP HP Z440 [4 or 8 core 3.0 Ghz or higher] Intel Nvidia PK2200 Avid Artist DNxIO V4 16/32/64 GB DDR4- 2400 memory Avid Artist DNxIQ AMD W5100 Avid Artist DNxIV Avid Artist DNxIP Lenovo P510 6 or 8 core 3.0 Ghz or higher Intel Nvidia P2000, Avid Artist DNxIO V4 16/32/64 GB DDR4- 2400 memory M2000, K2200 Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxIP Lenovo P410 6 or 8 core 3.0 Ghz or higher Intel Nvidia P2000, Avid Artist DNxIO V4 16/32/64 GB DDR4- 2400 memory P1000 Avid Artist DNxIQ M2000, K1200 Avid Artist DNxIV Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with HP Z840 Dual 8, 10 or 12 core Intel V3 2.3 Ghz Nvidia K4200, Avid Artist DNxIO or higher Onboard NIC supported for ISIS 32 or K5200, M4000, Avid Artist DNxIQ 64 GB DDR4- 2133 memory M5000, M6000 Avid Artist DNxIV Avid Artist DNxIP AMD W7100, W8100 HP Z640 Dual 8, 10 or 12 core Intel V3 2.3 Ghz Nvidia K2200, Avid Artist DNxIO or higher 32/64 GB DDR4-2133 Memory K4200, K5200, Avid Artist DNxIQ M4000, M5000 Avid Artist DNxIV Avid Artist DNxIP AMD, W5100, W7100, W8100 Dell R7910 Dual 8,10 or 12 Core Intel V3 Nvidia K4200, Avid Artist DNxIO 2.3 Ghz or higher Onboard NIC supported for K5200, M4000, Avid Artist DNxIQ ISIS 32 or 64 GB DDR4- 2133 memory M5000, M6000 Avid Artist DNxIV Avid Artist DNxIP AMD W7100, W8100 Dell 7910 Dual 8, 10 or 12 core Intel V3 2.3 Ghz Nvidia K4200, Avid Artist DNxIO or higher - Onboard NIC supported for ISIS 32 K5200, M4000, Avid Artist DNxIQ or 64 GB DDR4- 2133 memory M5000, M6000 Avid Artist DNxIV Avid Artist DNxIP AMD W7100, W8100 Dell 7810 Dual 8, 10 or 12 core Intel V3 2.3 Ghz Nvidia K2200, Avid Artist DNxIO or higher - Onboard NIC supported for ISIS 32 K4200, K5200, Avid Artist DNxIQ or 64 GB DDR4- 2133 memory M4000, M5000 Avid Artist DNxIV Avid Artist DNxIP AMD W5100, W7100, W8100 Lenovo P900 Dual 8, 10 or 12 core Intel V3 2.3 Nvidia K4200, Avid Artist DNxIO Ghz or higher - Onboard NIC supported for ISIS K5200, M4000, Avid Artist DNxIQ 32 or 64 GB DDR4- 2133 memory M5000, M6000 Avid Artist DNxIV Avid Artist DNxIP Lenovo P700 Dual 8, 10 or 12 core Intel V3 Nvidia, K2200 Avid Artist DNxIO 2.3 Ghz or higher - Onboard NIC supported for K4200, K5200, Avid Artist DNxIQ ISIS M4000, M5000 Avid Artist DNxIV 32 or 64 GB DDR4- 2133 memory Avid Artist DNxIP Lenovo P310 Tower and SFF (Small Form Nvidia K620, Software Only Factor) Quad Xeon E3- 1245V5 3.5 Ghz K1200 Onboard NIC supported for ISIS K2200 16/32 GB DDR4- 2133 Memory Qualified Hardware and Operating Systems Qualified PC Hardware Graphics Card Supported with Dell 3620 quad Xeon E3-1245V5 3.5 Ghz Nvidia K620, Software Only Onboard NIC supported for ISIS 16/32 GB K2200 DDR4- 2133 Memory Dell 3420 SFF (Small Form Factor) Quad Xeon Nvidia K620, Software Only E3-1245V5 3.5 Ghz K1200 Onboard NIC supported for ISIS 16/32 GB DDR4- 2133 Memory Dell 5810 4-core or 8 core Intel V3 3.0 Ghz or Nvidia K2200 Avid Artist DNxIO higher Avid Artist DNxIQ AMD W5100 Onboard NIC supported for ISIS Avid Artist DNxIV 16 or 32 GB DDR4- 2133 memory Avid Artist DNxIP Lenovo P500 4-core or 8 core Intel V3 3.0 Ghz Nvidia K2200 Avid Artist DNxIO or higher Avid Artist DNxIQ Onboard NIC supported for ISIS Avid Artist DNxIV 16 or 32 GB DDR4- 2133 memory Avid Artist DNxIP Qualified PC Notebooks for Avid Media Composer The following PC Notebooks are qualified with Avid Media Composer. The following applies to the editing system when running on a laptop:
Qualified PC Notebooks Graphics Cards Supported With HP Zbook Power G7 15" 2.4 Ghz or higher 6 Nvidia P620, Avid Artist DNxIO or 8 core i7/i9/Xeon 10th Gen T1000 T2000 Avid Artist DNxIQ 16 to 64 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook Create G7 15" 2.4 Ghz or higher 6 or Nvidia GeForce Avid Artist DNxIO 8 core i7/i9 10th Gen Avid Artist DNxIQ RTX 2070, RTX 16 to 32 GB DDR4-2933 Memory HP Zbook Avid Artist DNxIV 2070 Super RTX Studio G7 15" 2.4 Ghz or higher 6 or 8 core Avid Artist DNxID 2080 Super i7/i9/Xeon 10th Gen Avid Artist DNxIP HP Zbook Studio G7 15" 2.4 Ghz or higher 6 Nvidia T1000 Avid Artist DNxIO or 8 core i7/i9/Xeon 10th Gen T2000 RTX 3000, Avid Artist DNxIQ 16 to 64 GB DDR4-2933 Memory 4000, 5000 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With HP Zbook Firefly 14" or 15" 1.6 Ghz or higher Nvidia P520 Intel Avid Artist DNxIO 4 or 6 core i7 10th Gen UHD Avid Artist DNxIQ 16 to 64 GB DDR4-2666 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P17 17" 2.4 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon 10th gen T2000 RTX 3000, Avid Artist DNxIQ 16 to 128 GB DDR4-2933 Memory 4000, 5000 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P15 15" 2.4 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon 10th gen T2000 Avid Artist DNxIQ 16 to 128 GB DDR4-2933 Memory Avid Artist DNxIV RTX 3000, 4000, Avid Artist DNxID Avid Artist DNxIP Lenovo P15v 15" 2.4 Ghz or higher 6 or 8 core Nvidia P620 Avid Artist DNxIO i7/i9/Xeon 10th gen Avid Artist DNxIQ Intel UHD 16 to 64 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P1 G3 15" 2.4 Ghz or higher 6 or 8 core Nvidia Avid Artist DNxIO i7/i9/Xeon 10th gen Avid Artist DNxIQ T1000, T2000 16 to 64 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 7750 17" 2.4 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon 10th gen Avid Artist DNxIQ RTX 3000, 4000, 16 to 128 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 7550 15" 2.4 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon 10th gen T2000 Avid Artist DNxIQ 16 to 128 GB DDR4-2933 Memory Avid Artist DNxIV RTX 3000, 4000 Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With Dell 5750 17" 2.4 Ghz or higher 6 or 8 core Nvidia T2000, Avid Artist DNxIO i7/i9/Xeon 10th gen RTX3000 Avid Artist DNxIQ 16 to 64 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 5550 15" 2.4 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon 10th gen T2000 Avid Artist DNxIQ 16 to 64 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 3551 15" 2.4 Ghz or higher 6 or 8 core Nvidia P620 Avid Artist DNxIO i7/i9 10th gen Avid Artist DNxIQ 16 to 64 GB DDR4-2933 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook 17 G6 2.3 Ghz or higher 6 or 8 core Nvidia RTX 3000, Avid Artist DNxIO i7/i9/Xeon 4000, 5000 Avid Artist DNxIQ 16 to 128 GB DDR4-2667 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook 15 G6 2.3 Ghz or higher 6 or 8 core Nvidia T1000 Avid Artist DNxIO i7/i9/Xeon T2000 RTX3000 Avid Artist DNxIQ 16 to 128 GB DDR4-2667 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P73 17" 2.6 Ghz or higher 6 or 8 core Nvidia T2000, Avid Artist DNxIO i7/i9/Xeon Avid Artist DNxIQ RTX 16 to 128 GB DDR4-2667 Memory Avid Artist DNxIV 3000,4000,5000 Avid Artist DNxID Avid Artist DNxIP Lenovo P1 G2 15" 2.6 Ghz or higher 6 core i7 Nvidia T1000, Avid Artist DNxIO 16 to 64 GB DDR4-2667 Memory T2000 Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With Lenovo P53 15" 2.3 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon T2000, Avid Artist DNxIQ 16 to 128 GB DDR4-2667 Memory Avid Artist DNxIV RTX 3000, 4000 Avid Artist DNxID Avid Artist DNxIP Dell 7740 17" 2.6 Ghz or higher 6 or 8 core Nvidia RTX 3000, Avid Artist DNxIO i7/i9/Xeon 4000, 5000 Avid Artist DNxIQ 16 to 128 GB DDR4-2667 Memory Avid Artist DNxIV AMD WX7130 Avid Artist DNxID Avid Artist DNxIP Dell 7540 15" 2.6 Ghz or higher 6 or 8 core Nvidia T1000 Avid Artist DNxIO i7/i9/Xeon T2000 RTX3000 Avid Artist DNxIQ 16 to 128 GB DDR4-2667 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 5540 15" 2.3 Ghz or higher 6 or 8 core Nvidia T1000, Avid Artist DNxIO i7/i9/Xeon T2000 Avid Artist DNxIQ 16 to 64 GB DDR4-2667 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 3541 15" 2.3 Ghz or higher 6 or 8 core Nvidia P620 Avid Artist DNxIO i7/i9/Xeon Avid Artist DNxIQ 16 to 32 GB DDR4-2667 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook Studio G5 5 2.6 Ghz or higher six Nvidia P1000, Avid Artist DNxIO core i7/Xeon E3 Ultrabook P2000 Avid Artist DNxIQ 16 to 64GB 2667Mhz DDR4 Memory Avid Artist DNxIV Dream Color option Avid Artist DNxID HP Thunderbolt dock G2 Avid Artist DNxIP Dell 5530 15" 2.6Ghz or higher 6 core i7/Xeon NvidiaP1000 Avid Artist DNxIO E3 P2000 Avid Artist DNxIQ Thin and light Avid Artist DNxIV 16 to 32 GB 2667Mhz DDR4 Memory Avid Artist DNxID USB 3.0 to Ethernet required for Avid NEXIS Avid Artist DNxIP Connectivity Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With Lenovo P1 15” 2.6 Ghz or higher six core Nvidia P1000 Avid Artist DNxIO i7/Xeon E3 Thin and Light Avid Artist DNxIQ 16 to 64 GB 2667Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook 17" G5 2.6 Ghz or higher six core Nvidia P3200, Avid Artist DNxIO i7/Xeon E3 P4200, P5200 Avid Artist DNxIQ 16 to 64 GB 2667Mhz DDR4 Memory AMD WX4170 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 7730 17" 2.6Ghz or higher 6 core i7/Xeon NvidiaP3200 Avid Artist DNxIO E3 P4200 P5200 Avid Artist DNxIQ 16 to 64 GB 2667Mhz DDR4 Memory AMD WX4170 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P72 2.6 Ghz or higher six core i7/Xeon Nvidia P3200, Avid Artist DNxIO E3 P4200, P5200 Avid Artist DNxIQ 16 to 64 GB 2667Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook 15" G5 2.6 Ghz or higher six core Nvidia P1000, Avid Artist DNxIO i7/Xeon E3 P2000 Avid Artist DNxIQ 16 to 64 GB 2667Mhz DDR4 Memory Avid Artist DNxIV AMD WX4150 Dreamcolor option Avid Artist DNxID Avid Artist DNxIP HP Zbook 15V G5 2.6 Ghz or higher six core Nvidia P600 Avid Artist DNxIO i7/Xeon E3 Avid Artist DNxIQ HP Thunderbolt dock G2 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 7530 15" 2.6Ghz or higher 6 core i7/Xeon NvidiaP1000 Avid Artist DNxIO E316 to 64 GB 2667Mhz DDR4 Memory P2000 Avid Artist DNxIQ AMD WX4150 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With Lenovo P52 2.6 Ghz or higher six core i7/Xeon Nvidia P1000, Avid Artist DNxIO E3 P2000 Avid Artist DNxIQ 16 to 64 GB 2667Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook 17" G4 2.8 Ghz or higher quad core Nvidia Avid Artist DNxIO i7/Xeon E3 P3000 Avid Artist DNxIQ HP Thunderbolt dock G2 P4000 Avid Artist DNxIV 16 to 64 GB DDR4-2400 Memory P5000 Avid Artist DNxID AMD Avid Artist DNxIP WX4170 HP Zbook 15" G4 2.8 Ghz or higher quad core Nvidia Avid Artist DNxIO i7/Xeon E3 M620 Avid Artist DNxIQ HP Thunderbolt dock G2 M1200 Avid Artist DNxIV 16 to 64 GB DDR4-2400 Memory M2200 Avid Artist DNxID AMD WX4150 Avid Artist DNxIP HP Zbook Studio Ultrabook G4 2.8 Ghz or Nvidia Avid Artist DNxIO higher quad core i7/Xeon E3 M1200 Avid Artist DNxIQ HP Thunderbolt dock G2 Avid Artist DNxIV 16 to 64 GB DDR4-2400 Memory Avid Artist DNxID Avid Artist DNxIP Dell 7720 17" 2.6 Ghz or higher quad core Nvidia P3000, Avid Artist DNxIO i7/Xeon E3 1920x1080 or 3840x2160 - 16 to P4000, P5000 Avid Artist DNxIQ 64 GB DDR4-2400 Memory Avid Artist DNxIV AMD Radeon Avid Artist DNxID WX4150, WX7100 Avid Artist DNxIP Dell 7520 15" 2.6 Ghz or higher quad core Nvidia M1200, Avid Artist DNxIO i7/Xeon E3 1920x1080 or 3840x2160 - 16 to M2200 Avid Artist DNxIQ 64 GB 2400Mhz DDR4 Memory Avid Artist DNxIV AMD Radeon Avid Artist DNxID WX4130, WX4150 Avid Artist DNxIP Dell 5520 15" 2.8 Ghz or higher quad core Nvidia M1200 Avid Artist DNxIO i7/Xeon E3 1920x1080 or 3840x2160 - 16 to Avid Artist DNxIQ 32 GB 2400Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With Dell 3520 15" 2.8 Ghz or higher quad core Nvidia Avid Artist DNxIO i7/Xeon E3 1920x1080 - 16 to 32 GB 2400Mhz Avid Artist DNxIQ M620 DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P51 2.6 Ghz or higher quad core Nvidia M1200, Avid Artist DNxIO i7/Xeon E3 M2200 Avid Artist DNxIQ 16 to 64 GB 2400Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P71 2.6 Ghz or higher quad core Nvidia P3000, Avid Artist DNxIO i7/Xeon E3 P4000, P5000 Avid Artist DNxIQ 16 to 64 GB 2400Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP HP Zbook 15" G3 2.6 Ghz or higher Quad core Nvidia M1000M, Avid Artist DNxIO i7/Xeon E3 1920x1080 or 3840x2160- 16 to 64 Avid Artist DNxIQ M2000M, M600M GB 2133Mhz DDR4 Memory, thunderbolt 3 Avid Artist DNxIV AMD, W5170M Avid Artist DNxID Avid Artist DNxIP HP Zbook 17" G3 2.7Ghz or higher quad core Nvidia M3000M, Avid Artist DNxIO M4000M, M5000M Avid Artist DNxIQ i7/Xeon E3 Avid Artist DNxIV AMD W7170M Avid Artist DNxID Avid Artist DNxIP Dell 7710 17" 2.7 Ghz quad core i7 or 2.9 Ghz Nvidia M1000M, Avid Artist DNxIO Xeon E3 1920x1080 or 3840x2160 - 16/32 GB M2000M Avid Artist DNxIQ 2133Mhz DDR4L Memory Avid Artist DNxIV AMD W7170M Avid Artist DNxID Avid Artist DNxIP Dell 7510 15" 2.5 Ghz and higher quad core i7 Nvidia M1000M, Avid Artist DNxIO 1920x1080 or 3200x1800 - 16/32 GB 2133Mhz M2000M Avid Artist DNxIQ DDR4L Memory Avid Artist DNxIV AMD W5170M Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified PC Notebooks Graphics Cards Supported With Dell 5510 15" 2.3 Ghz and higher quad core i7 Nvidia M1000M Avid Artist DNxIO 1920x1080 or 3840x2160 - 8/16 GB 2133Mhz Avid Artist DNxIQ DDR4L Memory USB-C Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Dell 3510 15" 2.3 Ghz and higher quad core i7 AMD W5130M Avid Artist DNxIO 1920x1080 - 16 GB 2133Mhz DDR4L Avid Artist DNxIQ Memory Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Lenovo P70 2.6 Ghz or higher quad core Nvidia M3000M, Avid Artist DNxIO i7/Xeon E3 M4000M, M5000M Avid Artist DNxIQ 1920x1080 or 3840x2160 - 16 to 64 GB Avid Artist DNxIV 2133Mhz DDR4, Memory, thunderbolt 3 Avid Artist DNxID Lenovo P50 2.6 Ghz or higher quad core Nvidia M1000M, Avid Artist DNxIO i7/Xeon E3 1920x1080 or 3840x2160 - 16 to 64 M2000M Avid Artist DNxIQ GB 2133Mhz DDR4 Memory, thunderbolt 3 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Macintosh Workstations for Avid Media Composer The following Macintosh Workstations are qualified with the Avid Media Composer.
> **Note:** Avid Artist DNxIV requires a Thunderbolt 2 or 3 card. See details here.
Qualified Macintosh Hardware Graphics Cards Supported With iMac Retina 5K 27" 3.8 Ghz 8-core Intel i7 AMD Radeon Pro Avid Artist DNxIO 3.6 Ghz 10-core Intel i9 5500XT, 5700, Avid Artist DNxIQ Aug 2020 5700XT Avid Artist DNxIV 16 to 128 GB 2666 Mhz DDR4 Avid Artist DNxID Avid Artist DNxIP Mac Pro 2019 AMD Radeon Pro Avid Artist DNxIO 3.5 Ghz 8 core, 3.3 Ghz 12 core, 3.2 Ghz 16 580X, W5700X, Pro Avid Artist DNxIQ core, 2.7 Ghz 24 core, 2.5 Ghz 28 core Vega II Avid Artist DNxIV 48 to 192GB 2933Mhz DDR4 Memory Avid Artist DNxID Avid Artist DNxIP Dual 10Gb Ethernet RJ45 Qualified Hardware and Operating Systems Qualified Macintosh Hardware Graphics Cards Supported With iMac Retina 5K 27” 3.6 GHz 8-core Intel i9 AMD Radeon Pro Avid Artist DNxIO 16 to 64GB 2666MHz DDR4 575x, 580x, Vega 48 Avid Artist DNxIQ Avid Artist DNxIV March 2019 Avid Artist DNxID Avid Artist DNxIP iMac Retina 4K 21.5” 3.2 GHz 6-core Intel i7 AMD Radeon Pro Avid Artist DNxIO 16 to 32 GB 2666 MH DDR4 560x Vega 20 Avid Artist DNxIQ Avid Artist DNxIV March 2019 Avid Artist DNxID Avid Artist DNxIP Mac mini 3.2 Ghz 6- core Intel i7 Intel UHD 630 Avid Artist DNxIO 16 to 64 GB 2666 Mhz DDR4 Memory Avid Artist DNxIQ Avid Artist DNxIV Late 2018 Avid Artist DNxID Avid Artist DNxIP iMac Pro 5K 27" 3.2 Ghz i7 8 core Radeon Pro Vega 56, Avid Artist DNxIO 3.0 Ghz i7 10 core 64 Avid Artist DNxIQ 2.5 Ghz i7 14 core Avid Artist DNxIV 2.3 Ghz i7 18 core Avid Artist DNxID Avid Artist DNxIP Late 2017 - 32 to 128GB 2666 Mhz DDR4 NOTE: 10Gb Ethernect requires Avid NEXIS Pro client v2018.3.
iMac Retina 5K 27" 4.2 Ghz i7 Quad core Radeon Pro 570, 575, Avid Artist DNxIO 580 Avid Artist DNxIQ Mid 2017 - 16 to 64 GB 2400 Mhz DDR4 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP iMac Retina 4K 21.5" 3.6 Ghz i7 Quad core Radeon Pro 555, 560 Avid Artist DNxIO Avid Artist DNxIQ Mid 2017 - 16 to 32 GB 2400Mhz DDR4 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP iMac Retina 5K 27" 4.0 Ghz i7 Quad core Radeon M390, M395, Avid Artist DNxIO Late 2015 - 16/32 GB 1867Mhz DDR3 M395X Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Qualified Hardware and Operating Systems Qualified Macintosh Hardware Graphics Cards Supported With iMac Retina 4K 21.5" 3.3 Ghz i7 Quad core Intel Iris Pro 6200 Avid Artist DNxIO Late 2015 - 16/32 GB 1867Mhz DDR3 Avid Artist DNxIQ Avid Artist DNxIV Avid Artist DNxIP Mac Pro 3.5 Ghz 6-core, 3.0 Ghz 8-core, or Dual AMD FirePro Avid Artist DNxIO 2.7 Ghz 12-core Ivy Bridge CPU D300, D500, D700 Avid Artist DNxIQ Late 2013 Avid Artist DNxIV Avid Artist DNxID 16, 32 or 64 GB DDR3-1866Mhz Avid Artist DNxIP ECCmemory (4 DIMMs required) Sonnet and Magma Thunderbolt 2 Expansion chassis supported Qualified Macintosh Notebooks for Media Composer The following Macintosh notebooks are qualified with the current editing applications. The following applies to the editing system when running on a laptop.
(cid:129) HD Capture on Macintosh notebooks is not supported (cid:129) Playback in full quality 10 bit mode is not supported Qualified Macintosh Notebook Graphics Cards Supported With MacBook Pro 13" May 2020 Intel IRIS plus Avid Artist DNxIO 2.3 Ghz Intel i7 4-core Avid Artist DNxIQ 10th gen Intel Avid Artist DNxIV 16 to 32 GB 3733Mhz LPDDR4X Avid Artist DNxID Avid Artist DNxIP MacBook Pro 16"2019 2.6 Ghz i7 6-core or AMD Radeon Pro Avid Artist DNxIO 2.3, 2.4 Ghz i9 8-core Thunderbolt 3 5300M, 5500M Avid Artist DNxIQ 16 to 64GB 2666Mhz DDR4 Memory Avid Artist DNxIV Avid Artist DNxID Touch Bar not used by Media Composer Avid Artist DNxIP MacBook Pro 13" 2.8 Ghz 4-core Intel core i7 Intel Iris Plus 655 Avid Artist DNxIO - Mid 2019 Avid Artist DNxIQ 16 GB 2133Mhz LPDDR3 Avid Artist DNxIV Avid Artist DNxID Avid Artist DNxIP Feature Performance Qualified Macintosh Notebook Graphics Cards Supported With MacBook Pro 15" 2.2 Ghz and higher i7/i9 six UHD630 AMD Avid Artist DNxIO core Mid 2018 - Touch Bar & Thunderbolt 3 Radeon Pro 555X, Avid Artist DNxIQ 560X Avid Artist DNxIV Touch Bar not used by Media Composer Avid Artist DNxID Avid Artist DNxIP MacBook Pro 13" 2.7 Ghz quad core Intel core Intel Iris Plus 655 Avid Artist DNxIO i7 Mid 2018 - Touch Bar & Thunderbolt 3 Avid Artist DNxIQ 16 GB 2133Mhz LPDDR3 Memory Avid Artist DNxIV Avid Artist DNxID Touch Bar not used by Media Composer Avid Artist DNxIP MacBook Pro 15" 2.8 Ghz and higher i7 quad HD630 Avid Artist DNxIO core Mid 2017 - Touch Bar & Thunderbolt 3 AMD Avid Artist DNxIQ 16 GB 2133Mhz Radeon Avid Artist DNxIV Pro 555, 560 Avid Artist DNxID LPDDR3 Memory Avid Artist DNxIP Touch Bar not used by Media Composer MacBook Pro 15" 2.6 Ghz and higher i7 quad HD530 Avid Artist DNxIO core Late 2016 - Touch Bar & Thunderbolt 3 AMD Avid Artist DNxIQ 16 GB 2133Mhz DDR4 Memory Radeon Avid Artist DNxIV 450, 455, 460 Avid Artist DNxID Touch Bar not used by Media Composer Avid Artist DNxIP Feature Performance A number of features in this editing application are processor-intensive. As a result, you might experience problems if you are working on an older system. The following chart shows the hardware that Avid has successfully qualified when using these features. For a list of the qualified systems, see Qualified Workstations and Laptops.
Feature Description Recommended System 16K projects 64GB RAM minimum 48 Core Intel CPU systems with Nvidia RTX graphics Feature Performance Feature Description Recommended System Editing High Resolution, 64 GB RAM minimum, 96 GB HP Z8, Z6, High Frame Rate XAVC-I recommended Lenovo P920, P720 systems Media (UHD/4k in Dell 7920, Dell 7820 59.94p) (cid:129) Dual gold 6254 3.1 Ghz turbo to 4.0 4 streams of media and Ghz 18-core (72 with HT) color adapters (cid:129) Dual Xeon Gold 6154 3.0 Ghz, turbo up to 3.7 Ghz 18-core (72 cores with Hyperthreading) (cid:129) AMD WX-7100 (cid:129) Nvidia RTX 5000, RTX 6000, AMD WX9100 Storage: 10Gb Ethernet Avid NEXIS 1080p/50 XAVC Long 16 GB RAM minimum Qualified PC Dual 6 Core or higher Baseband Capture core with Hyperthreading Editing High Resolution, 16 GB RAM minimum, 32 GB HP Z8, Z6, High Frame Rate DNxHR recommended Lenovo P920, P720 systems Media (UHD/4k in HP Z840 59.94p) HP Z640/Z620 Dell 7920/7910 Dell 7820/7810 Lenovo P910/P900/ Lenovo P710/P700 (cid:129) NVIDIA RTX 5000, 6000, AMD WX9100 (cid:129) NVIDIA P5000, M5000 or K5200 and AMD WX-7100 PCIe Gen3 Gfx card (recommended) Mac Pro (cid:129) 12 core (24 with Hyperthreading) 3 GHz (cid:129) Dual AMD FirePro 500/700 Graphics card Storage: 10Gb Ethernet Avid NEXIS Feature Performance Feature Description Recommended System Editing High Resolution 16 GB RAM minimum Qualified PC Dual 6 Core or higher Media (Higher than 2K+) core with Hyperthreading DMF and Background 32 GB RAM recommended Qualified PC Dual 6 Core or higher Transcode, Background Render core with Hyperthreading Media Composer | Cloud 16 GB RAM minimum. 24 GB or i7 Quad core or higher with higher recommended depending Hyperthreading upon system model.
J2K Capture Qualified PC Dual 6 Core or higher core with Hyperthreading XDCAM Long GOP Avid recommends 16 GB RAM Qualified PC Dual 6 Core or higher 9-way MultiCam with high stream count core with Hyperthreading sequences Storage: 10Gb Ethernet ISIS Stereoscopic 3D For optimal performance with Qualified PC Dual 6 Core or higher Stereoscopic 3D, use these higher performance systems. Avid core with Hyperthreading recommends a minimum of 16GB RAM when using Stereoscopic 3D.
XDCAM HD50 Capture Qualified systems HD RGB 4444 HD RGB capture requires a high Qualified PC Dual 6 Core or higher Apple ProRes 4444 end workstation.
DNxHD 4444 core with Hyperthreading Storage: 10Gb Ethernet ISIS AMA (QuickTime) AMA is a processor intensive Recommendation of qualified systems operation. Lower end platforms depends on your planned use of this may not offer optimum feature. Heavy usage of highly performance. Highly compressed compressed codecs requires the high end codecs such as H.264 will exhibit systems. (Dual 6 Core or Dual 8 Core minimal real-time performance. systems) Avid Artist I/O Device Compatibility Feature Description Recommended System AMA (RED) AMA is a processor intensive Qualified Xeon Workstations operation. Older platforms may not offer optimum performance. NOTE: RED plug-in uses the Graphics you will get better performance Processor. Better performance with high with higher end workstations. performance graphics cards.
AVCI-Intra Capture AVC-Intra capture with software 24 core and higher Windows systems codecs is supported. only.
AVCI-Intra AVC-Intra(AVC-I) is a high 4-Way MultiCam Playback quality, low bit-rate HD codec and is very CPU intensive.
Core Systems Four Stream Playback:
Core Systems AMA Workflows: Dual Quad, Dual 6 or Dual 8 core systems Avid Artist I/O Device Compatibility The following table shows the minimum version Media Composer supported with the Avid Artist I/O devices.
You must download the appropriate Avid Artist software from your Avid Master Account.
Minimum supported version Media Device Composer Avid Artist | DNxIO Media Composer v8.4.1 and higher Avid Artist | DNxIQ Media Composerv8.8.3 and higher Avid Artist | DNxIV Media Composer v8.10 and higher Avid Artist | DNxIP Media Composer v2018.8 Avid Artist | DNxID Media Composer v2018.9 Compatibility Chart Compatibility Chart The following table lists the NVIDIA® driver, QuickTime®, Windows Media™, shared storage, Sony® XDCAM™, Panasonic® P2, and Avid Artist Series versions that were qualified with the Avid editing applications. You can also refer to Documentation and version matrix.
IMPORTANT: For information on third party support (for example, Sorenson, Boris, etc) see the third party’s web site.
Item Versions Comments QuickTime Support v7.7.9 (Windows) Note: QuickTime v10X does not include v10.x, (v7.x legacy) (Macintosh) QuickTime Pro options.
Note: QuickTime is not supported with Windows 10.
Avid Interplay See Knowledge Base article on IMPORTANT: The Avid Interplay Support compatibility. components that get installed on the editing application must be updated to the Avid Interplay version that is released with the editing application. These include the Media Indexer, Interplay Access, Interplay Framework, Interplay Transfer Client and ProEncode Client.
The Avid Interplay Server components can remain on the previous releases listed as supported. For details, see the “Avid Editing Application Compatibility with Interplay Releases” doc on the Knowledge Base.
NVIDIA Driver v461.72 See “Setting up the NVIDIA Card” on Support page 37.
For setting up the driver for stereoscopic, see the NVIDIA setup info in the Stereoscopic 3D Workflow Guide.
Shared Storage Avid NEXIS and Avid ISIS®. See “Shared Storage Support” on Support page 38.
Sony XDCAM driver v2.13 (XDCAM Transfer for The VFAM firmware version for Macintosh) PDW-U1 is 2.600.
The PDW-U2 is 2.810.
Windows FAM v2.3.2 and VFAM The driver can be downloaded from v5.0.2 Sony's website http://esupport.sony.com/.
Avid Editing Application Compatibility with Pro Tools Item Versions Comments Panasonic P2 drive (Macintosh) v3.1.7 There is currently no P2 writeback support for Macintosh clients.
(Windows) v2.24 Avid Artist Series EuControl software v3.4 See the User’s Guide for information on (Euphonix) Artist Series Color setup information.
Avid Editing Application Compatibility with Pro Tools General Co-Installation Notes:
(cid:129) Install Pro Tools first and then Media Composer.
(cid:129) You must uninstall all older versions of Media Composer or Pro Tools before installing newer versions.
(cid:129) Co-install does not support both applications launched simultaneously.
(cid:129) When you uninstall Pro Tools, choose to uninstall just the application and not the audio system, this is named the “Safe Uninstall.” On a Macintosh Pro Tools 11 system no uninstallation is required. On a Windows Pro Tools 10 or 11 system, you must select the first uninstall option - “Pro Tools Only” - which is not selected by default.
(cid:129) If you run into any issues, uninstall both applications and reinstall Pro Tools first, and then reinstall your editing application.
(cid:129) Media Composer v5.0 and later and Pro Tools v8.0.3 and later do not include support for the Original Mbox. If you want to use the Original Mbox, you should use Media Composer v4.x and Pro Tools v8.0.1 instead.
(cid:129) If you want to install your Avid editing application on a system with the Pro Tools Avid Video Engine installed, you must use one of the following configurations:
- Media Composer v5.5/NewsCutter v9.5 and later with Pro Tools v9.0 or later.
- Media Composer v5.0.x/NewsCutter v9.0.x with Pro Tools v8.5 or earlier.
External Controllers External Controllers Your Avid editing application supports the following external fader controllers or mixers for automation gain and pan recording or as control surfaces:
(cid:129) Digi 002 (Windows only) (cid:129) Command|8 (cid:129) Avid Artist Control (cid:129) Avid Artist Mix (cid:129) Avid Artist Transport (cid:129) Avid Artist Color External controllers or mixers are optional. They are not required for you to perform automation gain or pan recording on an Avid editing system.
The following table compares Avid external controllers and mixers.
Avid Digi 002 Command| Artist Avid Avid Artist Avid Artist Feature (MC only) 8 Control Artist Mix Transport Color Control surface Yes Yes Yes Yes Yes for transport (transport controls and only, no soft other functions keys) Provides audio Yes No No No No play, input, and output Record Yes Yes Yes Yes No automation gain Record Yes Yes Yes Yes No automation pan Flying faders Yes (8) Yes (8) Yes (4) Yes (8) No Touch-sensitive Yes Yes Yes Yes No faders Touch-sensitive No No Yes Yes No panners Setting up the NVIDIA Card Avid Digi 002 Command| Artist Avid Avid Artist Avid Artist Feature (MC only) 8 Control Artist Mix Transport Color Solo/mute Yes Yes Yes Yes No Noa Supports audio No No No No mixing Latch mode Yes Yes Yes Yes No (also known as Snap mode) Number of 1024 1024 1024 1024 Not applicable steps of fader accuracy a. The Digi 002 can be used as a standalone audio mixer but not at the same time as it is being used as an automation gain or automation pan controller or control surface.
For more information on using these external fader controllers or mixers, see “Recording Automation Gain or Automation Pan Information” in the Help.
Setting up the NVIDIA Card To set up the NVIDIA card, you must make sure you have the correct display driver version (install the display driver if necessary, and set the correct display settings. See the “Compatibility Chart” on page 34 for information on the supported driver(s).
Prior to setting up the NVIDIA card, check to make sure you have the correct display driver version. If you do not have the correct NVIDIA driver, you can install it from the Nvidia website - Nvidia.com.
To check the NVIDIA display driver version:
1. Right-click the Desktop and select NVIDIA Control Panel. You can also open the Windows
Control Panel and double-click the NVIDIA Control Panel icon.
2. Click System Information at the bottom left corner of the NVIDIA Control Panel.
The version number is listed in the Graphics card information section on the ForceWare version line.
Shared Storage Support To install the NVIDIA display driver:
1. Download the applicable Nvidia driver from the Nvidia website - Nvidia.com.
2. Double-click the file for the applicable driver.
3. Follow the on-screen instructions, and then restart your system.
To setup multiple displays:
1. Right-click the Desktop, and select Nvidia Control Panel.
2. In the settings window in the left of the window, click Set up multiple displays.
3. Select or deselect the desired monitors listed.
To set the Driver for Avid Editing Environments
1. Right-click the Desktop, and select Nvidia Control Panel.
2. Select the Desktop menu selection in the Control Panel menu bar.
3. Enable Desktop > Video Editing Mode.
4. Click Manage 3D Settings.
5. Click the Global Setting tab.
6. Under Global presets, select Base Profile.
7. Scroll to locate the Power Management Mode. Select Prefer maximum performance.
8. Click Apply.
Reboot after installing the Nvidia software even if you are not prompted to do so.
Never use the Windows “roll back driver” feature on the Nvidia driver. The driver version must match the rest of the components the Nvidia installer installs.
Shared Storage Support For information on Shared Storage Support, see the Avid NEXIS and Avid ISIS tables in the following document:
http://resources.avid.com/SupportFiles/Attachments/MediaCentral_Compatibility_Matrix.pdf Shared Storage Support Product specifications are subject to change without notice and do not represent a commitment on the part of Avid Technology, Inc.
This product is subject to the terms and conditions of a software license agreement provided with the software. The product may only be used in accordance with the license agreement.
No part of this document may be reproduced or transmitted in any form or by any means, electronic or mechanical, including photocopying and recording, for any purpose without the express written permission of Avid Technology, Inc.
Portions © Copyright 2003-2007 of MOG Solutions.
U.S. GOVERNMENT RESTRICTED RIGHTS. This Software and its documentation are “commercial computer software” or “commercial computer software documentation.” In the event that such Software or documentation is acquired by or on behalf of a unit or agency of the U.S. Government, all rights with respect to this Software and documentation are subject to the terms of the License Agreement, pursuant to FAR §12.212(a) and/or DFARS §227.7202-1(a), as applicable.
Avid, the Avid Logo, Avid Everywhere, Avid DNXHD, Avid DNXHR, Avid Nexis, AirSpeed, Eleven, EUCON, Interplay, iNEWS, ISIS, Mbox, MediaCentral, Media Composer, NewsCutter, Pro Tools, ProSet and RealSet, Maestro, PlayMaker, Sibelius, Symphony, and all related product names and logos, are registered or unregistered trademarks of Avid Technology, Inc. in the United States and/or other countries. The Interplay name is used with the permission of the Interplay Entertainment Corp. which bears no responsibility for Avid products. All other trademarks are the property of their respective owners. For a full list of Avid trademarks, see:
http://www.avid.com/US/about-avid/legal-notices/trademarks.
Adobe and Photoshop are either registered trademarks or trademarks of Adobe Systems Incorporated in the United States and/or other countries. Apple and Macintosh are trademarks of Apple Computer, Inc., registered in the U.S. and other countries. Windows is either a registered trademark or trademark of Microsoft Corporation in the United States and/or other countries. All other trademarks contained herein are the property of their respective owners.
Avid Media Composer ReadMe (cid:129) Created 3/23/21